--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 		<script type="text/javascript" src="http://beneposto.pl/jqueryrotate/js/jQueryRotateCompressed.js"></script>
 		<script type="text/javascript" src="javascript.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="./stylesheet.css">
-		<title>Pomonodoro Timer</title>
+		<title>Pomodoro Timer</title>
 	</head>
 
 	<body>
 		<img id="tomato" src="greenTomato.png"/>
-		<div id="time"></div>
+		<div id="time">Press the Start Button to Begin!</div>
 		<button id="readyButton">Start</button>
 	</body>
 </html>
