--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 	<body>
 		<img id="tomato" src="greenTomato.png"/>
 		<div id="time">Press the Start Button to Begin!</div>
-		<button id="readyButton">Start</button>
+		<button type="button" class="btn btn-secondary" id="readyButton">Start</button>
 	</body>
 </html>
